[tool.poetry]
name = "vicare-exporter"
version = "0.1.0"
description = "Prometheus exporter for ViCare metrics"
authors = ["Sebastian Eckweiler <seb.eckweiler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
prometheus-client = "^0.14.1"
urllib3 = ">=1.26"
requests = "^2.31.0"
pyvicare = "^2.17.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
pre-commit = "^2.20.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 1000

[tool.flake8]
max-line-length = 1000
