[project]
name = "vicare-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prometheus-client>=0.22.1",
    "python-dotenv>=1.1.1",
    "pyvicare>=2.50.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
